@@ -1,31 +1,33 @@
-2cdd8540bfef7e76b17c2163efb93f3f *CHANGES
-75dbf52907eb8262113f2539b717aaa8 *DESCRIPTION
-7a7b7f3ae22a3e960478b2f20f748469 *NAMESPACE
-533970d8523fe7d712c8575aa5c1dbe6 *R/EMalgo.R
-e0cff93113da9b7cafa0a2724b04b36d *R/SS.R
+3af7a5d2c04c534d39899a78bf9a1669 *CHANGES
+2836618194f308c5213d7a0ffb002281 *DESCRIPTION
+3de0e167bb520f98d35cb8f70df064af *NAMESPACE
+0420963267b0e0adc01ae1b719de56b9 *R/EMalgo.R
+8d438b7e1c1e67cc654dc7b7ed14d2fe *R/SS.R
 5fb0c522f36a7400bf961425a5d25aa6 *R/emalgo1.R
 1462b4d3f2758f04359a2547af53f273 *R/extended.R
+14e8ec2efff6047bdbaa32637a4ffb8a *R/forecast.R
 2b83658e4417958bdef4caa7382ee78b *R/getFamily.R
-855c3e556ddab6633fa97ff20f3bc5b7 *R/kfs.R
+46def4f67817df60f39cd37c0567b336 *R/kfs.R
 978703d538c429365f4226e0120635df *R/simulation.R
 52c52e2a24bee4a80bca3d452a0ae675 *R/specialform.R
 e06d17cce7cc53e901ed93b4785a5578 *R/ssm.R
 d19469167d85d04087f4993955335d55 *R/zzz.R
-991b886f28ee3e344aba098e01a07bdf *data/kurit.rda
-dd0b2e0611b0d5019b354ada40ab0bac *data/mumps.rda
-75aac8b1fa0855814bc4f158a427c77b *data/mumps.txt.gz
-eec85b65564233b25f09304b6c9c2d61 *data/vandrivers.rda
-125c1e758a1c4620c741e72bdf976948 *data/vandrivers.txt.gz
+e06e00765d3c380c8e06301d03d6463d *data/kurit.rda
+872b599294f707c2393363ec6e6f68a6 *data/mumps.rda
+36972764b20b1a8a3da53c0c3b2457d2 *data/mumps.txt.gz
+ed99015f57311b3515e89508c034ca51 *data/vandrivers.rda
+67b6f43aaa1dc252e0a0b47ce61814f7 *data/vandrivers.txt.gz
 00daa5ab1573096596f7c22899e4bfe3 *demo/00Index
 563dbc33efca583c558a649794e0c742 *demo/gas.R
 23f3ab5bc8f6ebc5723f800be7357d48 *demo/kurit.R
 da5c4048cc7ece07ce31e276d123beef *demo/mumps.R
 f4511cfca298d3c2d107b742925801f6 *demo/vandrivers.R
-a47db5eb04fb5ddbd9d68c7ab7389ff7 *man/EMalgo.Rd
+38776b120817fac31ac8a50a2644521e *man/EMalgo.Rd
 019884cfbc7577ac9accaf6e49b2e111 *man/Fkfilter.Rd
 014604542526fbf809c93e37435348aa *man/Fkfs.Rd
 b5b90b6d25822b190b67235ab3e4dda4 *man/SS.Rd
 2d50f609e0af91f3e46b57b0a5e61b9f *man/extended.Rd
+ebb67f9fb2512fa3dc0d997552d471d7 *man/forecast.Rd
 86c339a3066813a841fbfa0a45fc558a *man/kfilter.Rd
 0a9417fc0b8147fa36044d552151fb6f *man/kfs.Rd
 f43373d72534dc7ad5055144e2763ed5 *man/kurit.Rd
@@ -38,4 +40,4 @@ ccf4d9e55993f2228bf686c1df7daf9f *man/specials.Rd
 75558964bd2747d70956801e5fe386ef *man/sspir-internal.Rd
 4f04f9fccdc8dc0e634de0c558ddf00d *man/sspir.Rd
 bac9524795f91445e1808e1963877404 *man/vandrivers.Rd
-235dacec7cba3846be0ba8f1f08a882a *sspir-Ex.R
+338541da6dbcbdb88ba867bdbaceb3f6 *sspir-Ex.R
