@@ -17,6 +17,7 @@ export("C0",
        "Fmat<-.ssm",
        "Fkfilter",
        "Fkfs",
+	 "forecast",
        "getFamily",
        "getFit",
        "Gmat",
